--- a/2ndProj/app/src/main/res/layout/item_msg_main_list.xml
+++ b/2ndProj/app/src/main/res/layout/item_msg_main_list.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
@@ -28,6 +29,7 @@
 
 
         <LinearLayout
+            android:id="@+id/layout_item_msg_list"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
