--- a/2ndProj/app/src/main/res/layout/activity_page2.xml
+++ b/2ndProj/app/src/main/res/layout/activity_page2.xml
@@ -7,8 +7,7 @@
     android:layout_height="match_parent"
     android:background="#FFFFFF"
 
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
 
     <LinearLayout
         android:id="@+id/linear_header"
