--- a/2ndProj/app/src/main/res/layout/item_hashtag_circle_list.xml
+++ b/2ndProj/app/src/main/res/layout/item_hashtag_circle_list.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="75dp"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white"
     android:orientation="vertical">
 
@@ -10,15 +10,14 @@
         android:id="@+id/circle_item_hashtag_list"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:src="@drawable/mask_man"
         android:layout_gravity="center"
-        />
+        android:src="@drawable/mask_man" />
 
     <TextView
         android:id="@+id/name_item_hashtag_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-   android:layout_marginLeft="3dp"
+        android:layout_marginLeft="3dp"
         android:layout_marginTop="7dp"
         android:layout_marginRight="3dp"
         android:ellipsize="end"
