[update] add location dialog update

--- a/2ndProj/app/src/main/res/layout/activity_page1.xml
+++ b/2ndProj/app/src/main/res/layout/activity_page1.xml
@@ -30,7 +30,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/nanumsquareeb"
-        android:text="스마트 재난문자"
+        android:text="Smart 재난문자"
         android:textColor="#FFFFFF"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -59,7 +59,7 @@
         android:layout_marginTop="11dp"
         android:layout_marginBottom="5dp"
         android:fontFamily="@font/nanumsquareb"
-        android:text="내가 지나온 곳을 기반으로 똑똑하게"
+        android:text="내가 지나온 곳을 기반으로 SMART하게"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/textView8"
         app:layout_constraintEnd_toEndOf="parent"
