--- a/2ndProj/app/src/main/res/layout/dialogue_add_location.xml
+++ b/2ndProj/app/src/main/res/layout/dialogue_add_location.xml
@@ -1,188 +1,167 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@drawable/background_dialog_add_location"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
     android:orientation="vertical">
 
-    <FrameLayout
-        android:layout_width="320dp"
-        android:layout_height="410dp"
-        android:background="@drawable/button_line_shape"
-        android:backgroundTint="@color/twitterLowBlue"
-        android:visibility="visible">
+    <ImageView
+        android:id="@+id/cancel"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_gravity="right"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
+        android:adjustViewBounds="true"
+        android:background="@color/colorTransparent"
+        android:padding="6dp"
+        android:scaleType="fitCenter"
+        android:src="@drawable/x_image" />
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-        <LinearLayout
-            android:id="@+id/main_layout"
-            android:layout_width="320dp"
-            android:layout_height="380dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:background="@drawable/rectangle"
-            android:backgroundTint="@color/white"
-            android:elevation="10dp"
-            android:orientation="vertical"
-            android:padding="5dp"
-            android:translationZ="10dp"
-            android:visibility="visible">
+        <ImageView
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_marginLeft="20dp"
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:focusable="true"
-                android:focusableInTouchMode="true"
-                android:orientation="vertical"
-                android:visibility="visible">
+            android:adjustViewBounds="true"
+            android:background="@color/colorTransparent"
+            android:scaleType="fitCenter"
+            android:src="@drawable/gps" />
 
-                <TextView
-                    android:id="@+id/tag_editing"
-                    android:layout_width="70dp"
-                    android:layout_height="25dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginTop="16dp"
-                    android:background="@drawable/button_line_shape"
-                    android:backgroundTint="@color/twitterLowBlue"
-                    android:text="태그편집"
-                    android:textAlignment="center"
-                    android:textColor="#FDFDFD"
-                    android:textSize="16sp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/nanumsquareb"
+            android:layout_marginLeft="17dp"
+            android:paddingTop="2dp"
+            android:text="수신지역 설정하기"
+            android:textColor="@color/black"
+            android:textSize="20dp"
+            />
 
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/edit_tag"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="8dp"
-                    android:textColorHint="#939393">
+    </LinearLayout>
 
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/edit_tag_text"
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="30dp"/>
 
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="20dp"
-                        android:hint="ex ) 우리집, 할머니집"
-                        android:textColorHighlight="#DCDADA"
-                        android:textColorHint="#DCDADA"
-                        android:textColorLink="#DCDADA"
-                        android:textSize="16sp" />
-                </com.google.android.material.textfield.TextInputLayout>
+    <TextView
+        android:id="@+id/tag_editing"
+        android:layout_width="70dp"
+        android:layout_height="25dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
+        android:fontFamily="@font/nanumsquarer"
+        android:text="태그편집"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="15dp" />
 
-                <TextView
-                    android:id="@+id/location_setting"
-                    android:layout_width="70dp"
-                    android:layout_height="25dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginTop="16dp"
-                    android:background="@drawable/button_line_shape"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/edit_tag"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:textColorHint="#939393">
 
-                    android:backgroundTint="@color/twitterLowBlue"
-                    android:text="위치설정"
-                    android:textAlignment="center"
-                    android:textColor="#FDFDFD"
-                    android:textSize="16sp" />
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/edit_tag_text"
 
-                <EditText
-                    android:id="@+id/location"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
-                    android:ems="10"
-                    android:inputType="textPersonName"
-                    android:visibility="gone" />
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="20dp"
+            android:hint="ex ) 우리집, 할머니집"
+            android:textColorHighlight="#DCDADA"
+            android:textColorHint="#DCDADA"
+            android:textColorLink="#DCDADA"
+            android:textSize="16sp" />
+    </com.google.android.material.textfield.TextInputLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="30dp"/>
 
-                    <TextView
-                        android:id="@+id/current_location"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="16dp"
-                        android:layout_marginTop="16dp"
-                        android:layout_weight="1"
-                        android:text="현재위치로 설정 "
-                        android:textSize="16sp" />
+    <TextView
+        android:id="@+id/location_setting"
+        android:layout_width="70dp"
+        android:layout_height="25dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
+        android:text="위치설정"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="15dp" />
 
-                    <TextView
-                        android:id="@+id/slash"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="16dp"
-                        android:layout_weight="1.5"
-                        android:gravity="center"
-                        android:text="/ "
-                        android:textSize="16sp" />
+    <EditText
+        android:id="@+id/location"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:visibility="gone" />
 
-                    <!--                    <View-->
-                    <!--                        android:layout_width="0dp"-->
-                    <!--                        android:layout_height="0dp"-->
-                    <!--                        android:layout_weight="1"-->
-                    <!--                        android:background="@color/colorTransparent">-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-                    <!--                    </View>-->
+        <TextView
+            android:id="@+id/current_location"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_weight="1"
+            android:text="현재위치로 설정 "
+            android:textSize="16sp" />
 
-                    <TextView
-                        android:id="@+id/set_location"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="16dp"
-                        android:layout_marginRight="16dp"
-                        android:layout_weight="1"
-                        android:text="지역선택으로 설정"
-                        android:textSize="16sp" />
-                    " />
-                </LinearLayout>
+        <TextView
+            android:id="@+id/slash"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_weight="1.5"
+            android:gravity="center"
+            android:text="/ "
+            android:textSize="16sp" />
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
+        <TextView
+            android:id="@+id/set_location"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_weight="1"
+            android:text="지역선택으로 설정"
+            android:textSize="16sp" />
+        />
+    </LinearLayout>
 
-                    <TextView
-                        android:id="@+id/confirm"
-                        android:layout_width="match_parent"
-                        android:layout_height="25dp"
-                        android:layout_gravity="bottom"
-                        android:layout_marginLeft="16dp"
-                        android:layout_marginTop="16dp"
+    <Button
+        android:id="@+id/confirm"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:layout_marginTop="100dp"
+        android:background="@drawable/background_button_add_location"
 
-                        android:layout_marginRight="16dp"
-                        android:layout_weight="1"
-                        android:background="@drawable/button_line_shape"
-                        android:backgroundTint="@color/twitterLowBlue"
+        android:fontFamily="@font/nanumsquareb"
+        android:text="확    인"
+        android:textColor="@color/white"
+        android:textSize="20dp" />
 
-                        android:text="확인"
-                        android:textAlignment="center"
-                        android:textColor="#FDFDFD"
-                        android:textSize="18sp" />
-
-
-                    <TextView
-                        android:id="@+id/cancel"
-                        android:layout_width="match_parent"
-                        android:layout_height="25dp"
-
-                        android:layout_gravity="bottom"
-                        android:layout_marginLeft="16dp"
-                        android:layout_marginTop="16dp"
-                        android:layout_marginRight="16dp"
-                        android:layout_weight="1"
-                        android:background="@drawable/button_line_shape"
-                        android:backgroundTint="@color/twitterLowBlue"
-                        android:text="취소"
-                        android:textAlignment="center"
-                        android:textColor="#FDFDFD"
-                        android:textSize="18sp" />
-                </LinearLayout>
-
-            </LinearLayout>
-        </LinearLayout>
-    </FrameLayout>
 
 </LinearLayout>
+
+
+
