--- a/2ndProj/app/src/main/res/layout/dialogue_add_location.xml
+++ b/2ndProj/app/src/main/res/layout/dialogue_add_location.xml
@@ -3,27 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/background_dialog_add_location"
     android:focusable="true"
     android:focusableInTouchMode="true"
     android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/cancel"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:layout_gravity="right"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="10dp"
-        android:adjustViewBounds="true"
-        android:background="@color/colorTransparent"
-        android:padding="6dp"
-        android:scaleType="fitCenter"
-        android:src="@drawable/x_image" />
-
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:orientation="horizontal">
 
         <ImageView
@@ -39,127 +28,208 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="13dp"
             android:fontFamily="@font/nanumsquareb"
-            android:layout_marginLeft="17dp"
             android:paddingTop="2dp"
-            android:text="수신지역 설정하기"
+            android:text="재난문자 수신지역 등록"
             android:textColor="@color/black"
-            android:textSize="20dp"
-            />
+            android:textSize="20dp" />
 
     </LinearLayout>
 
     <Space
         android:layout_width="match_parent"
-        android:layout_height="30dp"/>
+        android:layout_height="30dp" />
 
     <TextView
         android:id="@+id/tag_editing"
-        android:layout_width="70dp"
-        android:layout_height="25dp"
-        android:layout_marginLeft="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="25dp"
         android:layout_marginTop="16dp"
         android:fontFamily="@font/nanumsquarer"
-        android:text="태그편집"
+        android:text="태그 편집"
         android:textAlignment="center"
-        android:textColor="@color/black"
+        android:textColor="@color/twitterBlue"
         android:textSize="15dp" />
+
+    <LinearLayout
+        android:id="@+id/spaceview_add_location"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        android:background="@color/white"/>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/edit_tag"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="15dp"
         android:textColorHint="#939393">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edit_tag_text"
-
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="20dp"
+            android:layout_marginEnd="15dp"
+            android:inputType="text"
+            android:maxLines="1"
             android:hint="ex ) 우리집, 할머니집"
             android:textColorHighlight="#DCDADA"
             android:textColorHint="#DCDADA"
             android:textColorLink="#DCDADA"
-            android:textSize="16sp" />
+            android:textSize="17dp"
+            android:fontFamily="@font/nanumsquarer"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <Space
         android:layout_width="match_parent"
-        android:layout_height="30dp"/>
+        android:layout_height="30dp" />
 
     <TextView
         android:id="@+id/location_setting"
-        android:layout_width="70dp"
-        android:layout_height="25dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
-        android:text="위치설정"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="25dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="15dp"
+        android:fontFamily="@font/nanumsquarer"
+        android:text="위치 설정"
         android:textAlignment="center"
-        android:textColor="@color/black"
+        android:textColor="@color/twitterBlue"
         android:textSize="15dp" />
 
     <EditText
         android:id="@+id/location"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:ems="10"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginBottom="15dp"
+        android:fontFamily="@font/nanumsquarer"
         android:inputType="textPersonName"
-        android:visibility="gone" />
+        android:textColor="@color/black"
+        android:textSize="17dp"
+        android:visibility="gone"
+        android:clickable="false"
+        android:focusable="false"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_marginRight="15dp"
+        android:layout_marginLeft="15dp">
 
         <TextView
             android:id="@+id/current_location"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_weight="1"
             android:text="현재위치로 설정 "
-            android:textSize="16sp" />
+            android:textSize="17dp"
+            android:fontFamily="@font/nanumsquarer"/>
 
         <TextView
             android:id="@+id/slash"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_weight="1.5"
+            android:text="/"
             android:gravity="center"
-            android:text="/ "
-            android:textSize="16sp" />
+            android:fontFamily="@font/nanumsquarer"
+            android:textSize="14dp" />
 
         <TextView
             android:id="@+id/set_location"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_weight="1"
             android:text="지역선택으로 설정"
-            android:textSize="16sp" />
+            android:textSize="17dp"
+            android:fontFamily="@font/nanumsquarer"/>
         />
     </LinearLayout>
 
-    <Button
-        android:id="@+id/confirm"
+    <Space
         android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:layout_marginTop="100dp"
-        android:background="@drawable/background_button_add_location"
+        android:layout_height="30dp" />
 
-        android:fontFamily="@font/nanumsquareb"
-        android:text="확    인"
-        android:textColor="@color/white"
-        android:textSize="20dp" />
+    <TextView
+        android:id="@+id/location_image_setting"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="25dp"
+        android:layout_marginTop="15dp"
+        android:fontFamily="@font/nanumsquarer"
+        android:text="이미지 설정"
+        android:textAlignment="center"
+        android:textColor="@color/twitterBlue"
+        android:textSize="15dp" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerview_add_location"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="15dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="16dp"
+        android:background="@color/white"
+        android:orientation="horizontal"
+        android:overScrollMode="never"
+        android:scrollbars="none"
+
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+
+
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="50dp" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/colorGray2" />
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/cancel"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@drawable/background_cancel_button_add_location"
+                android:fontFamily="@font/nanumsquareb"
+                android:text="취    소"
+                android:textColor="@color/black"
+                android:textSize="15dp" />
+
+            <Button
+                android:id="@+id/confirm"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@drawable/background_ok_button_add_location"
+
+                android:fontFamily="@font/nanumsquareb"
+                android:text="확    인"
+                android:textColor="@color/black"
+                android:textSize="15dp" />
+
+        </LinearLayout>
+
+        <View
+            android:layout_width="1dp"
+            android:layout_height="55dp"
+            android:layout_gravity="center"
+            android:background="@color/colorGray2" />
+    </FrameLayout>
 
 </LinearLayout>
 
