--- a/2ndProj/app/src/main/res/values/dimens.xml
+++ b/2ndProj/app/src/main/res/values/dimens.xml
@@ -9,4 +9,5 @@
     <dimen name="offset">20dp</dimen>
     <dimen name="pageMarginAndOffset">40dp</dimen>
     <dimen name="frameSize">320dp</dimen>
+    <dimen name="space">23dp</dimen>
 </resources>
