--- a/2ndProj/app/src/main/res/layout/item_location_circle_list.xml
+++ b/2ndProj/app/src/main/res/layout/item_location_circle_list.xml
@@ -19,17 +19,13 @@
 
             android:src="@drawable/mask_man" />
 
-        <ImageView
-            android:id="@+id/check_img__location_iem"
+        <CheckBox
+            android:id="@+id/checkbox_location_item_hashtag_list"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:adjustViewBounds="true"
-            android:layout_marginLeft="5dp"
-            android:background="@color/colorTransparent"
-            android:scaleType="fitCenter"
-            android:src="@drawable/check_img"
-            android:visibility="invisible"/>
-
+            android:background="@drawable/custom_checkbox"
+            android:layout_gravity="center"
+            android:button="@null"/>
 
     </FrameLayout>
 
