--- a/2ndProj/app/src/main/res/layout/item_location_list.xml
+++ b/2ndProj/app/src/main/res/layout/item_location_list.xml
@@ -8,13 +8,10 @@
         android:id="@+id/id_locationitem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:text="서울"
         android:textAlignment="center"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintHorizontal_weight="1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        android:textColor="@color/black"
+        android:fontFamily="@font/nanumsquarer"/>
 </LinearLayout>
