--- a/2ndProj/app/src/main/res/layout/item_page2_list.xml
+++ b/2ndProj/app/src/main/res/layout/item_page2_list.xml
@@ -12,7 +12,7 @@
         android:layout_width="100dp"
         android:layout_height="wrap_content"
 
-
+        android:textColor="@color/black"
         android:fontFamily="@font/nanumsquareeb"
         android:text="우리집"
         android:textSize="18sp" />
@@ -24,6 +24,8 @@
         android:layout_height="wrap_content"
         android:layout_marginRight="16dp"
 
+        android:fontFamily="@font/nanumsquarer"
+        android:textColor="@color/black"
         android:layout_weight="1"
         android:text="서울특별시 전체"
         android:textSize="18sp" />
@@ -33,5 +35,7 @@
         android:layout_width="50dp"
         android:layout_height="30dp"
         android:background="@drawable/button_line_shape"
+        android:textColor="@color/black"
+        android:fontFamily="@font/nanumsquarer"
         android:text="삭제" />
 </LinearLayout>
