--- a/2ndProj/app/src/main/res/layout-v14/activity_main.xml
+++ b/2ndProj/app/src/main/res/layout-v14/activity_main.xml
@@ -24,6 +24,7 @@
             android:textSize="20dp" />
 
         <ImageView
+            android:id="@+id/icon_setting"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_gravity="right"
